src/test/resources/regressions/features/multisets/multiset-literal-fail12.gobra
// Any copyright is dedicated to the Public Domain.
// http://creativecommons.org/publicdomain/zero/1.0/

package pkg

func foo() {
  // error: multiset literals cannot contain keys
  //:: ExpectedOutput(type_error)
  ghost m := mset[int] { 0 : 12 }
}
